tests/diag/for-non-iterable.expected
tests/diag/for-non-iterable.wisp:3:12: error: for-iter must be `rows`, <tags-src>.list, <dbus_signal-src>.history or <tray-src>.items
    for x in c {
             ^
