tests/diag/for-non-iterable.wisp
source c = cpu();
surface bar {
  for x in c {
    cell {
      text = "{x}";
    }
  }
}
